--- a/ComicServer/.target/views/read.scala.html
+++ b/ComicServer/.target/views/read.scala.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,21 +9,21 @@
     <meta name="author" content="">
 
 
-    <link href="./bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="./bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="@routes.Assets.at("bootstrap/css/bootstrap.min.css")" rel="stylesheet">
+    <link href="@routes.Assets.at("bootstrap/css/bootstrap-responsive.css")" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,600,300' rel='stylesheet' type='text/css'>
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <script src="./js/jquery-1.9.1.min.js"></script>
-    <script src="./js/jquery.hotkeys.js"></script>
-    <script src="./bootstrap/js/bootstrap.min.js"></script>
+    <script src="@routes.Assets.at("javascripts/jquery-1.9.1.min.js")"></script>
+    <script src="@routes.Assets.at("javascripts/jquery.hotkeys.js")"></script>
+    <script src="@routes.Assets.at("bootstrap/js/bootstrap.min.js")"></script>
 
-    <script src="./js/zip.js"></script>
-    <script src="./js/deflate.js"></script>
-    <script src="./js/main.js"></script>
+    <script src="@routes.Assets.at("javascripts/zip.js")"></script>
+    <script src="@routes.Assets.at("javascripts/deflate.js")"></script>
+    <script src="@routes.Assets.at("javascripts/main.js")"></script>
 
     <style>
       html, body {
@@ -30,7 +31,7 @@
         font-family: "Open Sans", Helvetica, Arial, Sans-serif;
       }
       body {
-        background: #171717 url('html5_logo.png') no-repeat bottom right;
+        background: #171717 url('@routes.Assets.at("images/html5_logo.png")') no-repeat bottom right;
         background-size: 256px 256px;
         color: #999;
       }
@@ -135,3 +136,4 @@
       </div>
   </body>
 </html>
+
