getting the codebase cutover a bit and adding basic navigation

--- a/ComicServer/app/views/index.scala.html
+++ b/ComicServer/app/views/index.scala.html
@@ -1,7 +1,9 @@
 @(message: String)
 
-@main("Welcome to Play") {
+@main("Web Slinger Comic Reader"){
+	
+} {
 
-    @play20.welcome(message, style = "Java")
+<h2>homepage</h2>
 
 }
