--- a/ComicServer/app/views/main.scala.html
+++ b/ComicServer/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(title: String)(content: Html)
+@(title: String)(header: Html)(content: Html)
 
 <!DOCTYPE html>
 
@@ -7,9 +7,98 @@
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+        <link href="@routes.Assets.at("bootstrap/css/bootstrap.min.css")" rel="stylesheet">
+	    <link href="@routes.Assets.at("bootstrap/css/bootstrap-responsive.css")" rel="stylesheet">
+	    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,600,300' rel='stylesheet' type='text/css'>
+    
         <script src="@routes.Assets.at("javascripts/jquery-1.9.1.min.js")" type="text/javascript"></script>
+        @header
+        
+        <style>
+			html, body {
+			  height: 100%;
+			  font-family: "Open Sans", Helvetica, Arial, Sans-serif;
+			}
+			body {
+			  background: #171717 url('@routes.Assets.at("images/html5_logo.png")') no-repeat bottom right;
+			  background-size: 256px 256px;
+			  color: #999;
+			}
+			h1 {
+			  color: #fff;
+			}
+			body .modal {
+			  color: #333;
+			}
+			#comicImages {
+			  text-align: center;
+			}
+			#introText {
+			  margin-top: 100px;
+			}
+			.fitVertical {
+			  height: 100%;
+			  height: -moz-calc(100% - 41px);
+			  height: -webkit-calc(100% - 41px);
+			  height: calc(100% - 41px);
+			  
+			  width: auto;
+			}
+			.spread2 .fitHorizontal {
+			  height: auto;
+			  width: 50%;        
+			}
+			.spread1 .fitHorizontal {
+			  height: auto;
+			  width: 100%;
+			}
+			
+			.fitBoth {
+			  width: auto;
+			  height: auto;
+			  max-height: 100%;
+			  max-height: -moz-calc(100% - 41px);
+			  max-height: -webkit-calc(100% - 41px);
+			  max-height: calc(100% - 41px);
+			  }
+			  .spread1 .fitBoth {
+			    max-width: 100%;
+			  }
+			  .spread2 .fitBoth {
+			    max-width: 50%;
+			}
+    	</style>
     </head>
-    <body>
-        @content
-    </body>
+	<body>
+	<div class="navbar navbar-inverse navbar-static-top">
+		<div class="navbar-inner">
+			<div class="container">
+				<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+				  <span class="icon-bar"></span>
+				  <span class="icon-bar"></span>
+				  <span class="icon-bar"></span>
+				</a>
+			  
+				<a class="brand" href="/#">Web Slinger Comic Reader</a>
+				<a class="brand" href="/reader#">Reader</a>
+				<a class="brand" href="/library#">Library</a>
+				
+				<div class="nav-collapse collapse">
+					<ul class="nav">
+						<li style="display: none;"><a href="#" title="Left arrow or k" id="prevPanel"><i class="icon-chevron-left icon-white"></i> Previous</a></li>
+						<li style="display: none;"><a href="#" title="Right arrow or j" id="nextPanel"><i class="icon-chevron-right icon-white"></i> Next</a></li>
+						<li style="display: none;"><a href="#" title="v key" id="fitVertical"><i class="icon-resize-vertical icon-white"></i> Fit Vertical</a></a></li>
+						<li style="display: none;"><a href="#" title="h key" id="fitHorizontal"><i class="icon-resize-horizontal icon-white"></i> Fit Horizontal</a></a></li>
+						<li style="display: none;"><a href="#" title="b key" id="fitBoth"><i class="icon-move icon-white"></i> Fit Both</a></a></li>
+						<li style="display: none;"><a href="#" title="f key" id="fullSpread"><i class="icon-pause icon-white"></i> Full Spread View</a></a></li>
+						<li style="display: none;"><a href="#" title="s key" id="singlePage"><i class="icon-stop icon-white"></i> Single Page View</a></a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	
+	    @content
+	</body>
 </html>
