--- a/ComicServer/app/views/library.scala.html
+++ b/ComicServer/app/views/library.scala.html
@@ -1,7 +1,24 @@
-@()
+
+
+@(model: UnzipModel)
+
+@import models.UnzipModel;
+@import java.net.URLEncoder;
+
 
 @main("Web Slinger Comic Reader"){
 	
 } {
-<h2>library</h2>
+
+	<div class="row">
+	@for(page <- model.pages){
+		<div class="col-xs-12 col-md-2">
+			@cover("/page/"+page.zipId+"/"+page.pageId+"/")(page.zipName)(page.zipId)
+
+		</div>
+		
+	} 
+	</div>
+
 }
+
