--- a/ComicServer/app/views/main.scala.html
+++ b/ComicServer/app/views/main.scala.html
@@ -7,98 +7,90 @@
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <link href="@routes.Assets.at("bootstrap/css/bootstrap.min.css")" rel="stylesheet">
-	    <link href="@routes.Assets.at("bootstrap/css/bootstrap-responsive.css")" rel="stylesheet">
+        
+        <script src="@routes.Assets.at("javascripts/jquery-1.9.1.min.js")" type="text/javascript"></script>
+        
+
+	
+	      
+	    <link href="@routes.Assets.at("bootstrap-3.1.1/css/bootstrap.css")" rel="stylesheet">
+	    <link href="@routes.Assets.at("stylesheets/main.css")" rel="stylesheet">
+	    <script src="@routes.Assets.at("bootstrap-3.1.1/js/bootstrap.min.js")"></script>
+	    <script src="@routes.Assets.at("javascripts/main.js")"></script>
+	    
+	    
+	    
 	    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,600,300' rel='stylesheet' type='text/css'>
     
-        <script src="@routes.Assets.at("javascripts/jquery-1.9.1.min.js")" type="text/javascript"></script>
+       
+        
         @header
         
         <style>
-			html, body {
-			  height: 100%;
-			  font-family: "Open Sans", Helvetica, Arial, Sans-serif;
-			}
-			body {
-			  background: #171717 url('@routes.Assets.at("images/html5_logo.png")') no-repeat bottom right;
-			  background-size: 256px 256px;
-			  color: #999;
-			}
-			h1 {
-			  color: #fff;
-			}
-			body .modal {
-			  color: #333;
-			}
-			#comicImages {
-			  text-align: center;
-			}
-			#introText {
-			  margin-top: 100px;
-			}
-			.fitVertical {
-			  height: 100%;
-			  height: -moz-calc(100% - 41px);
-			  height: -webkit-calc(100% - 41px);
-			  height: calc(100% - 41px);
-			  
-			  width: auto;
-			}
-			.spread2 .fitHorizontal {
-			  height: auto;
-			  width: 50%;        
-			}
-			.spread1 .fitHorizontal {
-			  height: auto;
-			  width: 100%;
-			}
-			
-			.fitBoth {
-			  width: auto;
-			  height: auto;
-			  max-height: 100%;
-			  max-height: -moz-calc(100% - 41px);
-			  max-height: -webkit-calc(100% - 41px);
-			  max-height: calc(100% - 41px);
-			  }
-			  .spread1 .fitBoth {
-			    max-width: 100%;
-			  }
-			  .spread2 .fitBoth {
-			    max-width: 50%;
-			}
+
     	</style>
     </head>
-	<body>
-	<div class="navbar navbar-inverse navbar-static-top">
-		<div class="navbar-inner">
-			<div class="container">
-				<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-				  <span class="icon-bar"></span>
-				  <span class="icon-bar"></span>
-				  <span class="icon-bar"></span>
-				</a>
-			  
-				<a class="brand" href="/#">Web Slinger Comic Reader</a>
-				<a class="brand" href="/reader#">Reader</a>
-				<a class="brand" href="/library#">Library</a>
+	<body onload="initMain()">
+		
+		<div id="main" class="show-action-bar show-top-bar">
+	
+			<div class="top-bar navbar navbar-inverse navbar-static-top">
+				<div class="navbar-inner">
+					<div class="">
+						<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+						  <span class="icon-bar"></span>
+						  <span class="icon-bar"></span>
+						  <span class="icon-bar"></span>
+						</a>
+					    
+					    
+					    <ul class = "nav navbar-nav">
+							<li><a class="navbar-brand" href="/#">Web Slinger Comic Reader</a></li>
+							<li><a class="navbar-brand" href="/reader#">Reader</a></li>
+							<li><a class="navbar-brand" href="/library#">Library</a></li>
+							<li style="display: none;"><a href="#" title="Left arrow or k" id="prevPanel"><i class="glyphicon glyphicon-chevron-right"></i> Previous</a></li>
+							<li style="display: none;"><a href="#" title="Right arrow or j" id="nextPanel"><i class="icon-chevron-right icon-white"></i> Next</a></li>
+							<li style="display: none;"><a href="#" title="v key" id="fitVertical"><i class="icon-resize-vertical icon-white"></i> Fit Vertical</a></a></li>
+							<li style="display: none;"><a href="#" title="h key" id="fitHorizontal"><i class="icon-resize-horizontal icon-white"></i> Fit Horizontal</a></a></li>
+							<li style="display: none;"><a href="#" title="b key" id="fitBoth"><i class="icon-move icon-white"></i> Fit Both</a></a></li>
+							<li style="display: none;"><a href="#" title="f key" id="fullSpread"><i class="icon-pause icon-white"></i> Full Spread View</a></a></li>
+							<li style="display: none;"><a href="#" title="s key" id="singlePage"><i class="icon-stop icon-white"></i> Single Page View</a></a></li>
+						</ul>
+						
 				
-				<div class="nav-collapse collapse">
-					<ul class="nav">
-						<li style="display: none;"><a href="#" title="Left arrow or k" id="prevPanel"><i class="icon-chevron-left icon-white"></i> Previous</a></li>
-						<li style="display: none;"><a href="#" title="Right arrow or j" id="nextPanel"><i class="icon-chevron-right icon-white"></i> Next</a></li>
-						<li style="display: none;"><a href="#" title="v key" id="fitVertical"><i class="icon-resize-vertical icon-white"></i> Fit Vertical</a></a></li>
-						<li style="display: none;"><a href="#" title="h key" id="fitHorizontal"><i class="icon-resize-horizontal icon-white"></i> Fit Horizontal</a></a></li>
-						<li style="display: none;"><a href="#" title="b key" id="fitBoth"><i class="icon-move icon-white"></i> Fit Both</a></a></li>
-						<li style="display: none;"><a href="#" title="f key" id="fullSpread"><i class="icon-pause icon-white"></i> Full Spread View</a></a></li>
-						<li style="display: none;"><a href="#" title="s key" id="singlePage"><i class="icon-stop icon-white"></i> Single Page View</a></a></li>
+					</div>
+				</div>
+			</div>
+			
+	
+			<div class="side-bar transition-out ">
+				<ul class = "nav nav-pills nav-stacked">
+					<li><a class="" href="/#">Home</a></li>
+					<li><a class="" href="/reader#">Reader</a></li>
+					<li><a class="" href="/library#">Library</a></li>
+				</ul>
+			</div>
+			
+			<div class="action-bar" >
+				<div class="action-bar-nav">
+					<ul class = "nav action-bar-nav">
+						<li><a class="navbar-link" id="expand-side-bar">
+							<span class="expand-side-bar glyphicon glyphicon glyphicon-circle-arrow-right"></span>
+							<span class="shrink-side-bar glyphicon glyphicon glyphicon-circle-arrow-left"></span>
+						</a></li>
+						
 					</ul>
 				</div>
 			</div>
+			<div class="scroll-container">
+				
+					    @content
+				
+			</div>
+		
 		</div>
-	</div>
 	
 	
-	    @content
+
 	</body>
 </html>
