--- a/ComicServer/.target/views/main.scala.html
+++ b/ComicServer/.target/views/main.scala.html
@@ -46,15 +46,14 @@
 					    
 					    <ul class = "nav navbar-nav">
 							<li><a class="navbar-brand" href="/#">Web Slinger Comic Reader</a></li>
-							<li><a class="navbar-brand" href="/reader#">Reader</a></li>
 							<li><a class="navbar-brand" href="/library#">Library</a></li>
 							<li style="display: none;"><a href="#" title="Left arrow or k" id="prevPanel"><i class="glyphicon glyphicon-chevron-right"></i> Previous</a></li>
-							<li style="display: none;"><a href="#" title="Right arrow or j" id="nextPanel"><i class="icon-chevron-right icon-white"></i> Next</a></li>
-							<li style="display: none;"><a href="#" title="v key" id="fitVertical"><i class="icon-resize-vertical icon-white"></i> Fit Vertical</a></a></li>
-							<li style="display: none;"><a href="#" title="h key" id="fitHorizontal"><i class="icon-resize-horizontal icon-white"></i> Fit Horizontal</a></a></li>
-							<li style="display: none;"><a href="#" title="b key" id="fitBoth"><i class="icon-move icon-white"></i> Fit Both</a></a></li>
-							<li style="display: none;"><a href="#" title="f key" id="fullSpread"><i class="icon-pause icon-white"></i> Full Spread View</a></a></li>
-							<li style="display: none;"><a href="#" title="s key" id="singlePage"><i class="icon-stop icon-white"></i> Single Page View</a></a></li>
+							<li style="display: none;"><a href="#" title="Right arrow or j" id="nextPanel"><i class="glyphicon glyphicon-chevron-right"></i> Next</a></li>
+							<li style="display: none;"><a href="#" title="v key" id="fitVertical"><i class="glyphicon glyphicon-resize-vertical"></i> Fit Vertical</a></a></li>
+							<li style="display: none;"><a href="#" title="h key" id="fitHorizontal"><i class="glyphicon glyphicon-resize-horizontal"></i> Fit Horizontal</a></a></li>
+							<li style="display: none;"><a href="#" title="b key" id="fitBoth"><i class="glyphicon glyphicon-move"></i> Fit Both</a></a></li>
+							<li style="display: none;"><a href="#" title="f key" id="fullSpread"><i class="glyphicon glyphicon-pause"></i> Full Spread View</a></a></li>
+							<li style="display: none;"><a href="#" title="s key" id="singlePage"><i class="glyphicon glyphicon-stop"></i> Single Page View</a></a></li>
 						</ul>
 						
 				
@@ -66,7 +65,6 @@
 			<div class="side-bar transition-out ">
 				<ul class = "nav nav-pills nav-stacked">
 					<li><a class="" href="/#">Home</a></li>
-					<li><a class="" href="/reader#">Reader</a></li>
 					<li><a class="" href="/library#">Library</a></li>
 				</ul>
 			</div>
