--- a/ComicServer/app/views/cover.scala.html
+++ b/ComicServer/app/views/cover.scala.html
@@ -1,11 +1,11 @@
 @* cover Template File *@
-@(source: String)(name: String)(zipId:java.lang.Integer)
+@(source: String)(name: String)(comicBookId:java.lang.Integer)
 
 <div class = "cover-container thumbnail">
-	<a href="/reader/@zipId/">
-	<img class="img-cover" src = "@source" alt="@name")"></src>
-	<div class="caption">
-        <span>@name</span>
-    </div>
+    <a href="/reader/@comicBookId/">
+        <img class="img-cover" src = "@source" alt="@name")"></src>
+        <div class="caption">
+            <span>@name</span>
+        </div>
     </a>
 </div>
