--- a/ComicServer/public/stylesheets/main.css
+++ b/ComicServer/public/stylesheets/main.css
@@ -20,11 +20,7 @@
 			  margin-top: 100px;
 			}
 			.fitVertical {
-			  height: 100%;
-			  height: -moz-calc(100% - 41px);
-			  height: -webkit-calc(100% - 41px);
-			  height: calc(100% - 41px);
-			  
+			  max-height: 100%;		  
 			  width: auto;
 			}
 			.spread2 .fitHorizontal {
@@ -42,7 +38,7 @@
 			  max-height: 100%;
 			  max-height: -moz-calc(100% - 41px);
 			  max-height: -webkit-calc(100% - 41px);
-			  max-height: calc(100% - 41px);
+			  max-height: 100%
 			  }
 			  .spread1 .fitBoth {
 			    max-width: 100%;
@@ -101,7 +97,6 @@
 			    right: 0;
 			    bottom: 0;
 			    left: 0;
-			    padding: 25px;
 			    overflow-x: hidden;
 			    overflow-y: auto;
 			    -webkit-overflow-scrolling: touch;
