adding some more stuff

--- a/ComicServer/app/views/main.scala.html
+++ b/ComicServer/app/views/main.scala.html
@@ -80,7 +80,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="scroll-container">
+			<div class="scroll-container" id = "main-container">
 				
 					    @content
 				
