--- a/ComicServer/app/views/app.scala.html
+++ b/ComicServer/app/views/app.scala.html
@@ -2,6 +2,7 @@
 
 @main("Web Slinger Comic Reader"){
 
+    <script src="@routes.Assets.at("javascripts/jquery.hotkeys.js")"></script>
     <script src="@routes.Assets.at("backbone.marionette/underscore.js")"></script>
     <script src="@routes.Assets.at("backbone.marionette/backbone.js")"></script>
     <script src="@routes.Assets.at("backbone.marionette/backbone.marionette.js")"></script>
@@ -10,6 +11,11 @@
     <script src="@routes.Assets.at("appscripts/Models/LibraryModel.js")"></script>
     <script src="@routes.Assets.at("appscripts/Views/ComicView.js")"></script>
     <script src="@routes.Assets.at("appscripts/Views/LibraryView.js")"></script>
+    <script src="@routes.Assets.at("appscripts/Views/SideBarView.js")"></script>
+    <script src="@routes.Assets.at("appscripts/Views/PageView.js")"></script>
+    <script src="@routes.Assets.at("appscripts/Views/ReaderView.js")"></script>
+    <script src="@routes.Assets.at("appscripts/Models/PageModel.js")"></script>
+    <script src="@routes.Assets.at("appscripts/Models/PageCollection.js")"></script>
 
     <script type="text/template" id ="LibraryTemplate">
         <div class="row" id="LibraryView">
@@ -17,10 +23,10 @@
     </script>
 
     <script type="text/template" id="ComicTemplate">
-        <div class="col-xs-12 col-md-2">
+        <div class="col-xs-12 col-md-2 cover-box">
                     <span>
                         <div class = "cover-container thumbnail">
-                            <a href="/reader/<%= id %>/">
+                            <a href="#reader/<%= id %>/">
                                 <img class="img-cover" src = "/page/<%=id%>/<%=coverIndex%>/" alt="<%=fileName%>"></src>
                                 <div class="caption">
                                     <span><%=fileName%></span>
@@ -29,6 +35,28 @@
                         </div>
                 </span>
         </div>
+    </script>
+
+    <script type="text/template" id="SideBarTemplate">
+        <div class="side-bar transition-out ">
+            <ul class = "nav nav-pills nav-stacked" id="SideBarItems">
+                <li><a class="" href="#">Home</a></li>
+                <li><a class="" href="#library">Library</a></li>
+                <li><a class="" href="#reader">Reader</a></li>
+            </ul>
+        </div>
+
+    </script>
+
+    <script type="text/template" id="ReaderTemplate">
+        <div id="comicImages">
+
+        </div>
+    </script>
+
+    <script type="text/template" id="PageTemplate">
+        <img id="page-<%=id%>" src="/page/<%=comicBookId%>/<%=id%>/"></img>
+
     </script>
 
     <script type="text/javascript">
