--- a/ComicServer/app/views/main.scala.html
+++ b/ComicServer/app/views/main.scala.html
@@ -5,14 +5,10 @@
 <html>
     <head>
         <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         
         <script src="@routes.Assets.at("javascripts/jquery-1.9.1.min.js")" type="text/javascript"></script>
         
-
-	
-	      
 	    <link href="@routes.Assets.at("bootstrap-3.1.1/css/bootstrap.css")" rel="stylesheet">
 	    <link href="@routes.Assets.at("stylesheets/main.css")" rel="stylesheet">
 	    <script src="@routes.Assets.at("bootstrap-3.1.1/js/bootstrap.min.js")"></script>
@@ -45,7 +41,7 @@
 					    
 					    
 					    <ul class = "nav navbar-nav">
-							<li><a class="navbar-brand" href="/#">Web Slinger Comic Reader</a></li>
+							<li><a class="navbar-brand" href="/app#">Web Slinger Comic Reader</a></li>
 							<li><a class="navbar-brand" href="/library#">Library</a></li>
 							<li style="display: none;"><a href="#" title="Left arrow or k" id="prevPanel"><i class="glyphicon glyphicon-chevron-right"></i> Previous</a></li>
 							<li style="display: none;"><a href="#" title="Right arrow or j" id="nextPanel"><i class="glyphicon glyphicon-chevron-right"></i> Next</a></li>
@@ -62,13 +58,8 @@
 			</div>
 			
 	
-			<div class="side-bar transition-out ">
-				<ul class = "nav nav-pills nav-stacked">
-					<li><a class="" href="/#">Home</a></li>
-					<li><a class="" href="/library#">Library</a></li>
-				</ul>
-			</div>
-			
+			<div id="side-bar-container"></div>
+
 			<div class="action-bar" >
 				<div class="action-bar-nav">
 					<ul class = "nav action-bar-nav">
