lots of changes

--- a/ComicServer/app/views/app.scala.html
+++ b/ComicServer/app/views/app.scala.html
@@ -11,6 +11,8 @@
     <script src="@routes.Assets.at("appscripts/Models/LibraryModel.js")"></script>
     <script src="@routes.Assets.at("appscripts/Views/ComicView.js")"></script>
     <script src="@routes.Assets.at("appscripts/Views/LibraryView.js")"></script>
+    <script src="@routes.Assets.at("appscripts/Models/FileModel.js")"></script>
+    <script src="@routes.Assets.at("appscripts/Views/AddView.js")"></script>
     <script src="@routes.Assets.at("appscripts/Views/SideBarView.js")"></script>
     <script src="@routes.Assets.at("appscripts/Views/PageView.js")"></script>
     <script src="@routes.Assets.at("appscripts/Views/ReaderView.js")"></script>
@@ -44,6 +46,36 @@
                 <li><a class="" href="#library">Library</a></li>
                 <li><a class="" href="#reader">Reader</a></li>
             </ul>
+        </div>
+
+    </script>
+
+    <script type="text/template" id="AddTemplate">
+
+        <div class="modal-dialog">
+            <div class = "modal-content">
+                <div class="modal-header">
+                    <span><h2><%= directory %></h2></span>
+                </div>
+                <div class="modal-body">
+                <div class = "addFolderContainer">
+                <h3>directories</h3>
+                  <ul class = "nav nav-pills nav-stacked ">
+                    <% if(parent){ %>
+                      <li class="addFolderRow" dir="<%=parent%>"><a><i class="glyphicon glyphicon-folder-open"/> .. </a> </li>
+                    <% }%>
+                    <% _.each(directories, function(dir){ %>
+                    <li class="addFolderRow" dir="<%=directory+'/'+dir%>"><a><i class="glyphicon glyphicon-folder-open"/> <%=dir%></a> </li>
+                    <% }); %>
+                  </ul>
+                 </div>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button id="addDirectoryButton" type="button" class="btn btn-primary" dir="<%=directory%>">Add Directory</button>
+                </div>
+            </div>
         </div>
 
     </script>
