--- a/ComicServer/app/views/app.scala.html
+++ b/ComicServer/app/views/app.scala.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button id="addDirectoryButton" type="button" class="btn btn-primary" dir="<%=directory%>">Add Directory</button>
+                    <button id="addDirectoryButton" type="button" data-dismiss="modal" class="btn btn-primary" dir="<%=directory%>">Add Directory</button>
                 </div>
             </div>
         </div>
