--- a/ComicServer/app/views/app.scala.html
+++ b/ComicServer/app/views/app.scala.html
@@ -29,7 +29,7 @@
                     <span>
                         <div class = "cover-container thumbnail">
                             <a href="#reader/<%= id %>/">
-                                <img class="img-cover" src = "/page/<%=id%>/<%=coverIndex%>/" alt="<%=fileName%>"></src>
+                                <img class="img-cover" src = "/thumbnail/<%=id%>/<%=coverIndex%>/" alt="<%=fileName%>"></src>
                                 <div class="caption">
                                     <span><%=fileName%></span>
                                 </div>
