adding a 10 px margin to the top of the cover boxes in library view

--- a/ComicServer/public/stylesheets/main.css
+++ b/ComicServer/public/stylesheets/main.css
@@ -169,6 +169,7 @@
 				max-height:200px;
 				margin-left:auto;
 				margin-right:auto;
+				margin-top:10px;
 			}
 			
 			.cover-container.thumbnail{
@@ -182,6 +183,7 @@
 
 			.cover-box{
 			    width:240px;
+			    margin-top:10px;
 			}
 
 
