deleting unused methods

--- a/ComicServer/app/views/main.scala.html
+++ b/ComicServer/app/views/main.scala.html
@@ -42,7 +42,7 @@
 					    
 					    
 					    <ul class = "nav navbar-nav">
-							<li><a class="navbar-brand" href="/app">Web Slinger Comic Reader</a></li>
+							<li><a class="navbar-brand" href="/">Web Slinger Comic Reader</a></li>
 							<li><a class="navbar-brand" href="#library">Library</a></li>
 							<li><a class="navbar-brand" href="#addModal" data-toggle="modal">Add</a></li>
 							<li style="display: none;"><a href="#" title="Left arrow or k" id="prevPanel"><span class="glyphicon glyphicon-chevron-right"></span> Previous</a></li>
