--- a/ComicServer/app/views/Templates/ComicBookTemplate.scala.html
+++ b/ComicServer/app/views/Templates/ComicBookTemplate.scala.html
@@ -2,7 +2,7 @@
     <span>
         <div class = "cover-container thumbnail">
             <a href="#reader/<%= id %>/">
-                <img class="img-cover" src = "/thumbnail/<%=id%>/<%=coverIndex%>/" alt="<%=fileName%>"></src>
+                <img class="img-cover" src = "/thumbnail/<%=id%>/" alt="<%=fileName%>"></src>
                 <div class="caption">
                     <span><%=fileName%></span>
                 </div>
