--- a/ComicServer/app/views/app.scala.html
+++ b/ComicServer/app/views/app.scala.html
@@ -20,12 +20,12 @@
     <script src="@routes.Assets.at("appscripts/Models/PageModel.js")"></script>
     <script src="@routes.Assets.at("appscripts/Models/PageCollection.js")"></script>
 
-    <script type="text/template" id="ComicTemplate">@Templates.ComicBookTemplate()</script>
-    <script type="text/template" id="LibraryTemplate">@Templates.LibraryTemplate()</script>
-    <script type="text/template" id="SideBarTemplate">@Templates.SideBarTemplate()</script>
-    <script type="text/template" id="AddTemplate">@Templates.AddTemplate()</script>
-    <script type="text/template" id="ReaderTemplate">@Templates.ReaderTemplate()</script>
-    <script type="text/template" id="PageTemplate">@Templates.PageTemplate()</script>
+    <script type="text/template" id="ComicTemplate">@Templates.ComicBookTemplate();</script>
+    <script type="text/template" id="LibraryTemplate">@Templates.LibraryTemplate();</script>
+    <script type="text/template" id="SideBarTemplate">@Templates.SideBarTemplate();</script>
+    <script type="text/template" id="AddTemplate">@Templates.AddTemplate();</script>
+    <script type="text/template" id="ReaderTemplate">@Templates.ReaderTemplate();</script>
+    <script type="text/template" id="PageTemplate">@Templates.PageTemplate();</script>
 
     <script type="text/javascript">
 		var libraryJson = @Html(json);
