--- a/ComicServer/app/views/main.scala.html
+++ b/ComicServer/app/views/main.scala.html
@@ -41,17 +41,31 @@
 					    
 					    
 					    <ul class = "nav navbar-nav">
-							<li><a class="navbar-brand" href="/">Web Slinger Comic Reader</a></li>
-							<li><a class="navbar-brand" href="#library">Library</a></li>
-							<li><a class="navbar-brand" href="#addModal" data-toggle="modal">Add</a></li>
-							<li style="display: none;"><a href="#" title="Left arrow or k" id="prevPanel"><span class="glyphicon glyphicon-chevron-right"></span> Previous</a></li>
-							<li style="display: none;"><a href="#" title="Right arrow or j" id="nextPanel"><i class="glyphicon glyphicon-chevron-right"></i> Next</a></li>
-							<li style="display: none;"><a href="#" title="v key" id="fitVertical"><i class="glyphicon glyphicon-resize-vertical"></i> Fit Vertical</a></a></li>
-							<li style="display: none;"><a href="#" title="h key" id="fitHorizontal"><i class="glyphicon glyphicon-resize-horizontal"></i> Fit Horizontal</a></a></li>
-							<li style="display: none;"><a href="#" title="b key" id="fitBoth"><i class="glyphicon glyphicon-move"></i> Fit Both</a></a></li>
-							<li style="display: none;"><a href="#" title="f key" id="fullSpread"><i class="glyphicon glyphicon-pause"></i> Full Spread View</a></a></li>
-							<li style="display: none;"><a href="#" title="s key" id="singlePage"><i class="glyphicon glyphicon-stop"></i> Single Page View</a></a></li>
-						</ul>
+                            <li><a class="navbar-brand" href="/">Web Slinger Comic Reader</a></li>
+                            <li><a class="navbar-brand" href="#library">Library</a></li>
+                            <li><a class="navbar-brand" href="#addModal" data-toggle="modal">Add</a></li>
+                            <li style="display : none ;"><a href="#" title="Left arrow or k" id="prevPanel"><span class="glyphicon glyphicon-chevron-right"></span>
+                                Previous</a>
+                            </li>
+                            <li style="display : none ;"><a href="#" title="Right arrow or j" id="nextPanel"><i class="glyphicon glyphicon-chevron-right"></i>
+                                Next</a>
+                            </li>
+                            <li style="display : none ;"><a href="#" title="v key" id="fitVertical"><i class="glyphicon glyphicon-resize-vertical"></i>
+                                Fit Vertical</a>
+                            </li>
+                            <li style="display : none ;"><a href="#" title="h key" id="fitHorizontal"><i class="glyphicon glyphicon-resize-horizontal"></i>
+                                Fit Horizontal</a>
+                            </li>
+                            <li style="display : none ;"><a href="#" title="b key" id="fitBoth"><i class="glyphicon glyphicon-move"></i>
+                                Fit Both</a>
+                            </li>
+                            <li style="display : none ;"><a href="#" title="f key" id="fullSpread"><i class="glyphicon glyphicon-pause"></i>
+                                Full Spread View</a>
+                            </li>
+                            <li style="display : none ;"><a href="#" title="s key" id="singlePage"><i class="glyphicon glyphicon-stop"></i>
+                                Single Page View</a>
+                            </li>
+                        </ul>
 						
 				
 					</div>
