getting login working

--- a/ComicServer/app/views/app.scala.html
+++ b/ComicServer/app/views/app.scala.html
@@ -1,7 +1,7 @@
-@(json: String)
+@(json: String, name: String)
 
 
-@main("Web Slinger Comic Reader"){
+@main("Web Slinger Comic Reader", name){
 
     <script src="@routes.Assets.at("javascripts/jquery.hotkeys.js")"></script>
     <script src="@routes.Assets.at("backbone.marionette/underscore.js")"></script>
@@ -35,12 +35,20 @@
         });
     </script>
 
-} {
-
-
-
-
-
-
-
+}{
+    <div class="container" id="introText">
+        <div class="row">
+            <div class="span10">
+                <h1>JavaScript &amp; HTML5 Comic Reader</h1>
+                <div id="alertArea"></div>
+                <p>Started as a
+                    <a href="http://www.raymondcamden.com/index.cfm/2012/5/29/Building-an-HTML5-Comic-Book-Reader#c2DCDC6B6-924D-59C5-1E7A546B79CAC44F">weekend project</a>
+                    by
+                    <a href="http://www.raymondcamden.com/">Raymond Camden</a>, and later developed by <a href="http://rkuykendall.com/">Robert Kuykendall</a>
+                    on <a href="https://github.com/rkuykendall/HTML5ComicBookReader">GitHub</a>.
+                    Continued by Matt Goldfarb.
+                <p>
+            </div>
+        </div>
+    </div>
 }
