--- a/ComicServer/app/views/login.scala.html
+++ b/ComicServer/app/views/login.scala.html
@@ -1,14 +1,23 @@
 @(form: Form[Application.Login])
 
-<html>
-    <head>
-        <title>Zentasks</title>
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("stylesheets/login.css")">
-    </head>
-    <body>
+
+
+    @main("Web Slinger Comic Reader", null){
+
+    }{
         @helper.form(routes.Application.authenticate) {
             <h1>Sign in</h1>
+            @if(form.hasGlobalErrors) {
+                <p class="error">
+                @form.globalError.message
+                </p>
+            }
+            @if(flash.contains("success")) {
+                <p class="success">
+                @flash.get("success")
+                </p>
+            }
+
 
             <p>
                 <input type="email" name="email" placeholder="Email" value="@form("email").value">
@@ -20,6 +29,4 @@
                 <button type="submit">Login</button>
             </p>
         }
-
-    </body>
-</html>
+    }
