--- a/ComicServer/app/views/main.scala.html
+++ b/ComicServer/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(title: String)(header: Html)(content: Html)
+@(title: String, name: String)(header: Html)(content: Html)
 
 <!DOCTYPE html>
 
@@ -52,8 +52,10 @@
 							<li style="display: none;"><a href="#" title="f key" id="fullSpread"><i class="glyphicon glyphicon-pause"></i> Full Spread View</a></a></li>
 							<li style="display: none;"><a href="#" title="s key" id="singlePage"><i class="glyphicon glyphicon-stop"></i> Single Page View</a></a></li>
 						</ul>
-						
-				
+                        <ul class = "nav navbar-nav navbar-right">
+                            <li><span class = "navbar-brand navbar-right">@name</span></li>
+                            <li><a class="navbar-brand navbar-right" href="/logout">Logout</a></li>
+                        </ul>
 					</div>
 				</div>
 			</div>
