--- a/ComicServer/public/stylesheets/main.css
+++ b/ComicServer/public/stylesheets/main.css
@@ -99,10 +99,12 @@
 			    overflow-y: auto;
 			    -webkit-overflow-scrolling: touch;
 			}
-			
-			.show-action-bar .scroll-container, .show-action-bar .side-bar {
-				left: 60px;
-			}
+
+            @media (min-width: 767px) {
+                .show-action-bar .scroll-container, .show-action-bar .side-bar {
+                    left: 60px;
+                }
+            }
 			.show-top-bar .scroll-container, .show-top-bar .side-bar {
 				top:50px;
 			}
