--- a/ComicServer/app/views/main.scala.html
+++ b/ComicServer/app/views/main.scala.html
@@ -39,6 +39,7 @@
 							<li><a class="navbar-brand" href="/">Web Slinger Comic Reader</a></li>
 							<li><a class="navbar-brand" href="#library">Library</a></li>
 							<li><a class="navbar-brand" href="#addModal" data-toggle="modal">Add</a></li>
+                            <li><a class="navbar-brand" href="#users">Users</a></li>
 							<li style="display: none;"><a href="javascript:none;" title="Left arrow or k" id="prevPanel"><span class="glyphicon glyphicon-chevron-right"></span> Previous</a></li>
 							<li style="display: none;"><a href="javascript:none;" title="Right arrow or j" id="nextPanel"><i class="glyphicon glyphicon-chevron-right"></i> Next</a></li>
 							<li style="display: none;"><a href="javascript:none;" title="v key" id="fitVertical"><i class="fitVerticalButton glyphicon glyphicon-resize-vertical"></i> Fit Vertical</a></a></li>
@@ -68,6 +69,7 @@
                                     <li><a class="" href="/">home</a></li>
                                     <li><a class="" href="#library">Library</a></li>
                                     <li><a class="" href="#addModal" data-toggle="modal">Add</a></li>
+                                    <li><a class="navbar-brand" href="#users">Users</a></li>
                                     <li><a class="" href="/logout">Logout</a></li>
                                 </ul>
                             </li>                            <li class="pull-left" style="display: none;"><a href="javascript:none;" title="v key" id="fitVerticalxs"><i class="fitVerticalButton glyphicon glyphicon-resize-vertical"></i></a></a></li>
