--- a/ComicServer/app/views/app.scala.html
+++ b/ComicServer/app/views/app.scala.html
@@ -7,7 +7,9 @@
     <script src="@routes.Assets.at("backbone.marionette/underscore.js")"></script>
     <script src="@routes.Assets.at("backbone.marionette/backbone.js")"></script>
     <script src="@routes.Assets.at("backbone.marionette/backbone.marionette.js")"></script>
-    <script src="@routes.Assets.at("appscripts/app.js")"></script>
+
+
+    <script type"text/javascript">@appscripts.app()</script>
     <script src="@routes.Assets.at("appscripts/Models/ComicModel.js")"></script>
     <script src="@routes.Assets.at("appscripts/Models/LibraryModel.js")"></script>
     <script src="@routes.Assets.at("appscripts/Models/FileModel.js")"></script>
