hide top bar button

--- a/ComicServer/public/stylesheets/main.css
+++ b/ComicServer/public/stylesheets/main.css
@@ -144,10 +144,10 @@
 				left:300px;
 			}
 
-			.top-bar{
+			.top-bar-container{
 			    display:none;
 			}
-			.show-top-bar .top-bar{
+			.show-top-bar .top-bar-container{
 			    display:block;
 			}
 			
