--- a/ComicServer/app/views/main.scala.html
+++ b/ComicServer/app/views/main.scala.html
@@ -31,56 +31,59 @@
 	<body onload="initMain()">
 		
 		<div id="main" class="show-action-bar show-top-bar">
-	
-			<div class="top-bar navbar navbar-inverse navbar-static-top hidden-xs">
-				<div class="navbar-inner">
-					<div class="">
-					    <ul class = "nav navbar-nav">
-							<li><a class="navbar-brand" href="/">Web Slinger Comic Reader</a></li>
-							<li><a class="navbar-brand" href="#library">Library</a></li>
-							<li><a class="navbar-brand" href="#addModal" data-toggle="modal">Add</a></li>
-                            <li><a class="navbar-brand" href="#users">Users</a></li>
-							<li style="display: none;"><a href="javascript:none;" title="Left arrow or k" id="prevPanel"><span class="glyphicon glyphicon-chevron-right"></span> Previous</a></li>
-							<li style="display: none;"><a href="javascript:none;" title="Right arrow or j" id="nextPanel"><i class="glyphicon glyphicon-chevron-right"></i> Next</a></li>
-							<li style="display: none;"><a href="javascript:none;" title="v key" id="fitVertical"><i class="fitVerticalButton glyphicon glyphicon-resize-vertical"></i> Fit Vertical</a></a></li>
-							<li style="display: none;"><a href="javascript:none;" title="h key" id="fitHorizontal"><i class="fitHorizontalButton glyphicon glyphicon-resize-horizontal"></i> Fit Horizontal</a></a></li>
-							<li style="display: none;"><a href="javascript:none;" title="b key" id="fitBoth"><i class="fitBothButton glyphicon glyphicon-move"></i> Fit Both</a></a></li>
-							<li style="display: none;"><a href="javascript:none;" title="f key" id="fullSpread"><i class="glyphicon glyphicon-pause"></i> Full Spread View</a></a></li>
-							<li style="display: none;"><a href="javascript:none;" title="s key" id="singlePage"><i class="glyphicon glyphicon-stop"></i> Single Page View</a></a></li>
-						</ul>
-                        <ul class = "nav navbar-nav navbar-right">
-                            <li><span class = "navbar-brand navbar-right">@name</span></li>
-                            <li><a class="navbar-brand navbar-right" href="/logout">Logout</a></li>
-                        </ul>
-					</div>
-				</div>
-			</div>
+            <div class="top-bar-container">
+                <div class="top-bar navbar navbar-inverse navbar-static-top hidden-xs">
+                    <div class="navbar-inner">
+                        <div class="">
+                            <ul class = "nav navbar-nav">
+                                <li><a class="navbar-brand" href="/">Web Slinger Comic Reader</a></li>
+                                <li><a class="navbar-brand" href="#library">Library</a></li>
+                                <li><a class="navbar-brand" href="#addModal" data-toggle="modal">Add</a></li>
+                                <li><a class="navbar-brand" href="#users">Users</a></li>
+                                <li style="display: none;"><a href="javascript:none;" title="Left arrow or k" id="prevPanel"><span class="glyphicon glyphicon-chevron-right"></span> Previous</a></li>
+                                <li style="display: none;"><a href="javascript:none;" title="Right arrow or j" id="nextPanel"><i class="glyphicon glyphicon-chevron-right"></i> Next</a></li>
+                                <li style="display: none;"><a href="javascript:none;" title="v key" id="fitVertical"><i class="fitVerticalButton glyphicon glyphicon-resize-vertical"></i> Fit Vertical</a></a></li>
+                                <li style="display: none;"><a href="javascript:none;" title="h key" id="fitHorizontal"><i class="fitHorizontalButton glyphicon glyphicon-resize-horizontal"></i> Fit Horizontal</a></a></li>
+                                <li style="display: none;"><a href="javascript:none;" title="b key" id="fitBoth"><i class="fitBothButton glyphicon glyphicon-move"></i> Fit Both</a></a></li>
+                                <li style="display: none;"><a href="javascript:none;" id="hideTop"><i class="hideTopButton glyphicon glyphicon glyphicon-resize-full"></i> Hide Top Bar</a></a></li>
+                                <li style="display: none;"><a href="javascript:none;" title="f key" id="fullSpread"><i class="glyphicon glyphicon-pause"></i> Full Spread View</a></a></li>
+                                <li style="display: none;"><a href="javascript:none;" title="s key" id="singlePage"><i class="glyphicon glyphicon-stop"></i> Single Page View</a></a></li>
+                            </ul>
+                            <ul class = "nav navbar-nav navbar-right">
+                                <li><span class = "navbar-brand navbar-right">@name</span></li>
+                                <li><a class="navbar-brand navbar-right" href="/logout">Logout</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
 
-			<div class="top-bar navbar navbar-inverse navbar-static-top visible-xs-block">
-				<div class="navbar-inner">
-					<div class="">
-					    <ul class = "nav navbar-nav">
-                            <li class="dropdown pull-left">
-                                <a class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                            aria-expanded="fales" href="#">
-                                    Web Slinger Comic Reader <span class=""caret"></span>
-                                </a>
-                                <ul class="dropdown-menu" role="menu">
-                                    <li><a class="" href="/">home</a></li>
-                                    <li><a class="" href="#library">Library</a></li>
-                                    <li><a class="" href="#addModal" data-toggle="modal">Add</a></li>
-                                    <li><a class="navbar-brand" href="#users">Users</a></li>
-                                    <li><a class="" href="/logout">Logout</a></li>
-                                </ul>
-                            </li>                            <li class="pull-left" style="display: none;"><a href="javascript:none;" title="v key" id="fitVerticalxs"><i class="fitVerticalButton glyphicon glyphicon-resize-vertical"></i></a></a></li>
-                            <li class="pull-left" style="display: none;"><a href="javascript:none;" title="h key" id="fitHorizontalxs"><i class="fitHorizontalButton glyphicon glyphicon-resize-horizontal"></i></a></a></li>
-                            <li class="pull-left" style="display: none;"><a href="javascript:none;" title="b key" id="fitBothxs"><i class="fitBothButton glyphicon glyphicon-move"></i></a></a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-	
-			<div class="scroll-container" >
+                <div class="top-bar navbar navbar-inverse navbar-static-top visible-xs-block">
+                    <div class="navbar-inner">
+                        <div class="">
+                            <ul class = "nav navbar-nav">
+                                <li class="dropdown pull-left">
+                                    <a class="dropdown-toggle" data-toggle="dropdown" role="button"
+                                                aria-expanded="fales" href="#">
+                                        Web Slinger Comic Reader <span class=""caret"></span>
+                                    </a>
+                                    <ul class="dropdown-menu" role="menu">
+                                        <li><a class="" href="/">home</a></li>
+                                        <li><a class="" href="#library">Library</a></li>
+                                        <li><a class="" href="#addModal" data-toggle="modal">Add</a></li>
+                                        <li><a class="navbar-brand" href="#users">Users</a></li>
+                                        <li><a class="" href="/logout">Logout</a></li>
+                                    </ul>
+                                </li>                            <li class="pull-left" style="display: none;"><a href="javascript:none;" title="v key" id="fitVerticalxs"><i class="fitVerticalButton glyphicon glyphicon-resize-vertical"></i></a></a></li>
+                                <li class="pull-left" style="display: none;"><a href="javascript:none;" title="h key" id="fitHorizontalxs"><i class="fitHorizontalButton glyphicon glyphicon-resize-horizontal"></i></a></a></li>
+                                <li class="pull-left" style="display: none;"><a href="javascript:none;" title="b key" id="fitBothxs"><i class="fitBothButton glyphicon glyphicon-move"></i></a></a></li>
+                                <li class="pull-left" style="display: none;"><a href="javascript:none;" title="b key" id="hideTopxs"><i class="hideTopButton glyphicon glyphicon-resize-full"></i></a></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="scroll-container" >
                 <div class="container-fluid" id ="main-container">
 					    @content
                 </div>
