adding more buttons

--- a/ComicServer/app/views/main.scala.html
+++ b/ComicServer/app/views/main.scala.html
@@ -46,7 +46,7 @@
                                 <li style="display: none;"><a href="javascript:none;" title="v key" id="fitVertical"><i class="fitVerticalButton glyphicon glyphicon-resize-vertical"></i> Fit Vertical</a></a></li>
                                 <li style="display: none;"><a href="javascript:none;" title="h key" id="fitHorizontal"><i class="fitHorizontalButton glyphicon glyphicon-resize-horizontal"></i> Fit Horizontal</a></a></li>
                                 <li style="display: none;"><a href="javascript:none;" title="b key" id="fitBoth"><i class="fitBothButton glyphicon glyphicon-move"></i> Fit Both</a></a></li>
-                                <li style="display: none;"><a href="javascript:none;" id="hideTop"><i class="hideTopButton glyphicon glyphicon glyphicon-fullscreen"></i> Hide Top Bar</a></a></li>
+                                <li style="display: none;"><a href="javascript:none;" id="hideTop"><i class="hideTopButton glyphicon glyphicon-fullscreen"></i> Hide Top Bar</a></a></li>
                                 <li style="display: none;"><a href="javascript:none;" id="toggleTapTarget"><i class="toggleTapTarget glyphicon glyphicon-th-large"></i> Toggle Tap Targets</a></a></li>
                                 <li style="display: none;"><a href="javascript:none;" title="f key" id="fullSpread"><i class="glyphicon glyphicon-pause"></i> Full Spread View</a></a></li>
                                 <li style="display: none;"><a href="javascript:none;" title="s key" id="singlePage"><i class="glyphicon glyphicon-stop"></i> Single Page View</a></a></li>
@@ -66,7 +66,9 @@
                                 <li class="dropdown pull-left">
                                     <a class="dropdown-toggle" data-toggle="dropdown" role="button"
                                                 aria-expanded="fales" href="#">
-                                        Web Slinger Comic Reader <span class=""caret"></span>
+                                        <span class="hidden-xs">Web Slinger Comic Reader</span>
+                                        <span class="visible-xs"><i class="glyphicon glyphicon-menu-hamburger"></i> </span>
+                                        <span class=""caret"></span>
                                     </a>
                                     <ul class="dropdown-menu" role="menu">
                                         <li><a class="" href="/">home</a></li>
